--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script>
 function myFunction() {
 const urlParams = new URLSearchParams(window.location.search);
-const myParam = urlParams.get('myParam');
+const myParam = urlParams.get('mv_cas_oauth_token');
 }
 </script>
 
