--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 function myFunction() {
 const urlParams = new URLSearchParams(window.location.search);
 const myParam = urlParams.get('mv_cas_oauth_token');
+  alert(myParam);
 }
 </script>
 
